tooling/nargo_cli/tests/snapshots/compile_failure/no_impl_from_function/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Duplicate definitions of import with name Eq found
   ┌─ std/aes128.nr:1:1
   │
 1 │ #[foreign(aes128_encrypt)]
   │ - Second import found here
   │
   ┌─ src/main.nr:14:7
   │
14 │ trait Eq {
   │       -- First import found here
   │

error: Type provided when a numeric generic was expected
   ┌─ src/main.nr:18:19
   │
18 │ impl<T, N> Eq for [T; N] where T: Eq {
   │                   ------ the numeric generic is not of type `u32`
   │

error: No matching impl found for `Field: Eq`
  ┌─ src/main.nr:3:12
  │
3 │     assert(foo(array));
  │            --- No impl for `Field: Eq`
  │
  = Required by `[Field; 3]: Eq`

error: No matching impl found for `Field: Eq`
  ┌─ src/main.nr:7:12
  │
7 │     assert(foo(array));
  │            --- No impl for `Field: Eq`
  │
  = Required by `[Field; 3]: Eq`

Aborting due to 4 previous errors
