tooling/nargo_cli/tests/snapshots/compile_failure/no_impl_from_function/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type provided when a numeric generic was expected
   ┌─ src/main.nr:18:19
   │
18 │ impl<T, N> Eq for [T; N] where T: Eq {
   │                   ------ the numeric generic is not of type `u32`
   │

error: No matching impl found for `T: Eq`
  ┌─ src/main.nr:3:12
  │
3 │     assert(foo(array));
  │            --- No impl for `T: Eq`
  │
  = Required by `[Field; 3]: Eq`

error: No matching impl found for `T: Eq`
  ┌─ src/main.nr:7:12
  │
7 │     assert(foo(array));
  │            --- No impl for `T: Eq`
  │
  = Required by `[Field; 3]: Eq`

Aborting due to 3 previous errors
